--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <title>iam|SANG|mai</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
 <link rel="stylesheet" href="styles/style.css">
 <body>
 
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-    <div id="navBar" class="w3-white w3-wide w3-padding w3-card">
-        <a href="#home" class="w3-bar-item w3-button"><b>Sang Mai</b></a>
+<div class="stickToTop">
+    <div id="navBar">
+        <a href="#home" class="navLink"><b>Sang Mai</b></a>
         <!-- Float links to the right. Hide them on small screens -->
-        <div class="w3-right w3-hide-small">
-            <a href="#projects" class="w3-bar-item w3-button">Projects</a>
-            <a href="#about" class="w3-bar-item w3-button">About</a>
-            <a href="#resume" class="w3-bar-item w3-button">Resume</a>
-            <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+        <div class="rightFloat">
+            <a href="#projectContainer" class="navLink">Projects</a>
+            <a href="#aboutContainer" class="navLink">About</a>
+            <a href="#resume" class="navLink">Resume</a>
+            <a href="#contactContainer" class="navLink">Contact</a>
         </div>
     </div>
 </div>
@@ -27,16 +27,16 @@
 </header>
 
 <!-- Page content -->
-<div class="w3-content w3-padding" style="max-width:1564px">
+<div id="pageContent" style="max-width:1564px">
 
     <!-- Project Section -->
-    <div class="w3-container w3-padding-32" id="projects">
-        <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
+    <div id="projectContainer">
+        <h3 class="sectionTitle">Projects</h3>
     </div>
 
     <!-- About Section -->
-    <div class="w3-container w3-padding-32" id="about">
-        <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
+    <div id="aboutContainer">
+        <h3 class="sectionTitle">About</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
             occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
             laboris nisi ut aliquip ex ea commodo consequat.
@@ -44,14 +44,14 @@
     </div>
 
     <!-- Contact Section -->
-    <div class="w3-container w3-padding-32" id="contact">
-        <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
+    <div id="contactContainer">
+        <h3 class="sectionTitle">Contact</h3>
         <form action="/action_page.php" target="_blank">
             <input class="inputField" type="text" placeholder="Name" required name="Name">
             <input class="inputField" type="text" placeholder="Email" required name="Email">
             <input class="inputField" type="text" placeholder="Subject" required name="Subject">
-            <input class="inputField" type="text" placeholder="Comment" required name="Comment">
-            <button class="w3-button w3-black" type="submit">
+            <input class="inputField" type="text" placeholder="Message" required name="Message">
+            <button class="contactSubmitBtn" w3-button w3-black" type="submit">
                 <i class="fa fa-paper-plane"></i> SEND MESSAGE
             </button>
         </form>
@@ -60,7 +60,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
+<footer>
     <p>Sang Mai &copy 2019</p>
 </footer>
 
