--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!-- Project Section -->
     <div id="projectContainer">
         <h3 class="sectionTitle">Projects</h3>
+        <iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=2988802255/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://williegreen.bandcamp.com/album/days-of-future-past">Days of Future Past by Willie Green</a></iframe>
     </div>
 
     <!-- About Section -->
